--- a/_posts/2018-08-11-HDFS.md
+++ b/_posts/2018-08-11-HDFS.md
@@ -70,8 +70,9 @@ When the replication factor of a file is reduced, the NameNode selects excess re
 * Backup node: An extension to the Checkpoint node. In addition to checkpointing it also receives a stream of edits from the NameNode and maintains its own in-memory copy of the namespace, which is always in sync with the active NameNode namespace state. Only one Backup node may be registered with the NameNode at once. 
 * [Checkpoint and Backup Node in detail](http://hadoop.apache.org/docs/current/hadoop-project-dist/hadoop-hdfs/HdfsUserGuide.html)
 ### Commands in HDFS
-All commands start with hdfs
+* All commands start with hdfs
 | Commands | Description |
+|-------|--------|
 | fs –help ls | lists the usage information along with the options to use the command |
 | fs –ls –R /user/username | Returns all the available files and recursively lists all the subdirectories under /user/username |
 | fs –mkdir /user/username/directory-name | create a new directory |
