trying to see table

--- a/_posts/2018-08-11-HDFS.md
+++ b/_posts/2018-08-11-HDFS.md
@@ -72,7 +72,7 @@ When the replication factor of a file is reduced, the NameNode selects excess re
 ### Commands in HDFS
 * All commands start with hdfs  
 | Commands | Description |
-|-------|--------|
+| :------ | :----------------------- |
 | fs –help ls | lists the usage information along with the options to use the command |
 | fs –ls –R /user/username | Returns all the available files and recursively lists all the subdirectories under /user/username |
 | fs –mkdir /user/username/directory-name | create a new directory |
@@ -83,11 +83,15 @@ When the replication factor of a file is reduced, the NameNode selects excess re
 | fs –df | Display disk usage of current hadoop distributed file system |
 | fs –expunge | empties the trash by deleting all the files and directories |
 * There a lot of other command similar to unix file system with hadoop fs prefixed.
+| Commands | Description |
+| :------ | :----------------------- |
 | classpath --glob | expands wildcard *I don't know what that is* |
 | classpath --jar | write classpath as manifest in jar named path |
 | classpath -h | print help |
 * prefix hdfs fcsk 
 * it checks file system integrity
+| Commands | Description |
+| :------ | :----------------------- |
 |-delete | Delete corrupted files. |
 | -files | Print out files being checked. |
 | -files -blocks | Print out the block report |
@@ -103,6 +107,8 @@ When the replication factor of a file is reduced, the NameNode selects excess re
 | -maintenance | Print out maintenance state node details. |
 | -blockId | Print out information about the block. |
 * prefix hdfs getconf
+| Commands | Description |
+| :------ | :----------------------- |
 | -namenodes | gets list of namenodes in the cluster. |
 | -secondaryNameNodes | gets list of secondary namenodes in the cluster. |
 | -backupNodes | gets list of backup nodes in the cluster. |
@@ -111,8 +117,12 @@ When the replication factor of a file is reduced, the NameNode selects excess re
 | -nnRpcAddresses | gets the namenode rpc addresses |
 | -confKey key | gets a specific key from the configuration |
 * prefix hdfs groups
+| Commands | Description |
+| :------ | :----------------------- |
 |  username | Returns the group information given one or more usernames. |
 * prefix hdfs balancer
+| Commands | Description |
+| :------ | :----------------------- |
 | -policy policy | datanode (default): Cluster is balanced if each datanode is balanced.blockpool: Cluster is balanced if each block pool in each datanode is balanced. |
 | -threshold threshold | Percentage of disk capacity. This overwrites the default threshold. |
 | -exclude -f hosts-file comma-separated list of hosts | Excludes the specified datanodes from being balanced by the balancer. |
@@ -123,6 +133,9 @@ When the replication factor of a file is reduced, the NameNode selects excess re
 | -runDuringUpgrade | Whether to run the balancer during an ongoing HDFS upgrade. This is usually not desired since it will not affect used space on over-utilized machines. |
 | -h | Display the tool usage and help information and exit. | 
 ### Generic options
+* Prefix hdfs
+| Commands | Description |
+| :------ | :----------------------- |
 | -archives comma separated list of archives | Specify comma separated archives to be unarchived on the compute machines. Applies only to job.  |
 | -conf configuration file | Specify an application configuration file.  |
 | -D property=value | Use value for given property.  |
