--- a/_posts/2018-08-11-HDFS.md
+++ b/_posts/2018-08-11-HDFS.md
@@ -75,6 +75,7 @@ All commands start with hdfs:
 | Commands | Description |
 | :------ | :----------------------- |
 | fs –help ls | lists the usage information along with the options to use the command |
+hi there
 | fs –ls –R /user/username | Returns all the available files and recursively lists all the subdirectories under /user/username |
 | fs –mkdir /user/username/directory-name | create a new directory |
 | fs –copyFromLocal Sample1.txt /user/username/destination-address | 
