--- a/_posts/2018-08-11-HDFS.md
+++ b/_posts/2018-08-11-HDFS.md
@@ -75,23 +75,27 @@ All commands start with hdfs:
 | Commands | Description |
 | :------ | :----------------------- |
 | fs –help ls | lists the usage information along with the options to use the command |
-hi there
 | fs –ls –R /user/username | Returns all the available files and recursively lists all the subdirectories under /user/username |
 | fs –mkdir /user/username/directory-name | create a new directory |
-| fs –copyFromLocal Sample1.txt /user/username/destination-address | 
+| fs –copyFromLocal Sample1.txt /user/username/destination-address | copy from local filesystem to hdfs |
 | fs –put Sample2.txt /user/username/destination-address | uploads a single file or multiple source files from local file system to hadoop distributed file system |
 | fs –moveFromLocal Sample1.txt /user/username/destination-address | deletes original and copy |
 | fs –du /user/username/destination-address | HDFS disk usage command |
 | fs –df | Display disk usage of current hadoop distributed file system |
 | fs –expunge | empties the trash by deleting all the files and directories |
-* There a lot of other command similar to unix file system with hadoop fs prefixed.
+
+###### There a lot of other command similar to unix file system with hadoop fs prefixed.
+Command prefix "hdfs ":
+
 | Commands | Description |
 | :------ | :----------------------- |
 | classpath --glob | expands wildcard *I don't know what that is* |
 | classpath --jar | write classpath as manifest in jar named path |
 | classpath -h | print help |
-* prefix hdfs fcsk 
-* it checks file system integrity
+
+###### It checks file system integrity
+Command prefix "hdfs fcsk ":
+
 | Commands | Description |
 | :------ | :----------------------- |
 |-delete | Delete corrupted files. |
@@ -108,7 +112,9 @@ hi there
 | -storagepolicies | Print out storage policy summary for the blocks. |
 | -maintenance | Print out maintenance state node details. |
 | -blockId | Print out information about the block. |
-* prefix hdfs getconf
+
+prefix hdfs getconf:
+
 | Commands | Description |
 | :------ | :----------------------- |
 | -namenodes | gets list of namenodes in the cluster. |
@@ -118,11 +124,14 @@ hi there
 | -excludeFile | gets the exclude file path that defines the datanodes that need to decommissioned. |
 | -nnRpcAddresses | gets the namenode rpc addresses |
 | -confKey key | gets a specific key from the configuration |
-* prefix hdfs groups
+
+prefix hdfs groups:
 | Commands | Description |
 | :------ | :----------------------- |
 |  username | Returns the group information given one or more usernames. |
-* prefix hdfs balancer
+
+prefix hdfs balancer:
+
 | Commands | Description |
 | :------ | :----------------------- |
 | -policy policy | datanode (default): Cluster is balanced if each datanode is balanced.blockpool: Cluster is balanced if each block pool in each datanode is balanced. |
@@ -133,9 +142,11 @@ hi there
 | -blockpools comma-separated list of blockpool ids | The balancer will only run on blockpools included in this list. |
 | -idleiterations <iterations> | Maximum number of idle iterations before exit. This overwrites the default idleiterations(5). |
 | -runDuringUpgrade | Whether to run the balancer during an ongoing HDFS upgrade. This is usually not desired since it will not affect used space on over-utilized machines. |
-| -h | Display the tool usage and help information and exit. | 
+| -h | Display the tool usage and help information and exit. |
+
 ### Generic options
-* Prefix hdfs
+Prefix hdfs :
+
 | Commands | Description |
 | :------ | :----------------------- |
 | -archives comma separated list of archives | Specify comma separated archives to be unarchived on the compute machines. Applies only to job.  |
@@ -145,8 +156,10 @@ hi there
 | -fs file:/// or hdfs://namenode:port | Specify default filesystem URL to use. Overrides ‘fs.defaultFS’ property from configurations. |
 | -jt local or resourcemanager:port | Specify a ResourceManager. Applies only to job. |
 | -libjars comma seperated list of jars | Specify comma separated jar files to include in the classpath. Applies only to job. |
+
 ##### [See more](http://hadoop.apache.org/docs/current/hadoop-project-dist/hadoop-common/CommandsManual.html#Generic_Options)
 #### Cacheadmin
+
 * hdfs cacheadmin [-addDirective -path <path> -pool <pool-name> [-force] [-replication <replication>] [-ttl <time-to-live>]]
 * hdfs cacheadmin [-modifyDirective -id <id> [-path <path>] [-force] [-replication <replication>] [-pool <pool-name>] [-ttl <time-to-live>]]
 * hdfs cacheadmin [-listDirectives [-stats] [-path <path>] [-pool <pool>] [-id <id>]]
@@ -157,5 +170,6 @@ hi there
 * hdfs cacheadmin [-removePool <name>]
 * hdfs cacheadmin [-listPools [-stats] [<name>]]
 * hdfs cacheadmin [-help <command-name>]
+
 
 
