--- a/_posts/2018-08-27-filelock.md
+++ b/_posts/2018-08-27-filelock.md
@@ -5,7 +5,7 @@ subtitle: Trying to learn big data
 tags: [big-data, software, distributed-system]
 ---
 ### General Architecture
-![DB](https://i.imgur.com/23GiZ89.png){:class="img-responsive"}
+![DB](../img/Screenshot from 2018-08-27 18-09-19.png){:class="img-responsive"}
 ### Before We start
 It's totally theoritical I have no practical experience in this topic. I want that(practical experience) that's why I am writing this blog &#x1f609; . This is an original content.
 
